# pio-simulator

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  flake.nix  pio_asm.c  pio_asm.h  pio_sim.c  pio_sim.h
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
cmake/: pio_simConfig.cmake.in
examples/: 01_blink.c  02_fifo_echo.c  03_uart_tx.c  04_ws2812.c  05_spi_dma.c  06_chip_bus.c  CMakeLists.txt  README.md
lib/config/: pio_sim_config.h
lib/include/: pio.h  pio_asm.h  pio_chip.h  pio_clk.h  pio_clock.h  pio_dma.h  pio_gpio.h  pio_sim.h
lib/src/: pio_asm.c  pio_chip.c  pio_clk.c  pio_clock.c  pio_dma.c  pio_gpio.c  pio_sim.c  pio_sim_internal.h
tests/: CMakeLists.txt  fuzz_pio_asm.c  fuzz_pio_dma.c  fuzz_pio_sim.c  test_pio_asm.c  test_pio_asm_vs_pioasm.c  test_pio_clk.c  test_pio_clock.c  test_pio_dma.c  test_pio_gpio.c  test_pio_programs.c  test_pio_sim.c  unity_config.h
tests/consumer/: CMakeLists.txt  main.c
tests/fuzz_corpus/: .gitignore  seed_comments  seed_define_shift  seed_expr_delay  seed_expr_overflow  seed_garbage  seed_jmp  seed_truncated_ops  seed_v1_config  seed_v1_prevnext  seed_v1_rxfifo
tests/fuzz_corpus_dma/: .gitignore  seed_chain_sum  seed_fifo_tx  seed_garbage  seed_mem_crc  seed_ring_bswap
tests/fuzz_corpus_sim/: seed_autopull_irq  seed_exec_heavy  seed_fifo_rx_regfile  seed_garbage  seed_squarewave
tests/pio/: define.pio  expr.pio  fwdref.pio  inout.pio  irq.pio  misc.pio  movset.pio  pushpull.pio  sideset.pio  sideset_opt.pio  spi_tx.pio  swd.pio  uart_tx.pio  v1_prevnext.pio  wait.pio  waitpol.pio  word.pio  ws2812.pio
tests/unity/: unity_config.h
