# SPDX-License-Identifier: MIT
# Unit tests for the PIO simulator and assembler, on Unity (a git submodule
# under third_party/unity). Run `git submodule update --init` before configuring.

add_library(unity STATIC ${CMAKE_SOURCE_DIR}/third_party/unity/src/unity.c)
target_include_directories(unity PUBLIC
    ${CMAKE_SOURCE_DIR}/third_party/unity/src
    ${CMAKE_CURRENT_SOURCE_DIR})  # tests/ holds unity_config.h
target_compile_definitions(unity PUBLIC UNITY_INCLUDE_CONFIG_H)
target_compile_options(unity PRIVATE -w)

foreach(t test_pio_sim test_pio_asm)
    add_executable(${t} ${t}.c)
    target_link_libraries(${t} PRIVATE pio_sim unity)
    add_test(NAME ${t} COMMAND ${t})
endforeach()

# ── Encoding differential vs the real Raspberry Pi pioasm ────────────────────
# pio_asm is otherwise only checked against hand-derived golden encodings. When a
# pioasm binary is available, cross-check every program in tests/pio against it:
# pioasm emits one golden <base>.json at build time and test_pio_asm_vs_pioasm
# compares the 16-bit instruction words (+ wrap / side-set). Optional locally
# (pass -DPIOASM_EXECUTABLE=/path/to/pioasm); CI builds pioasm from a pinned Pico
# SDK and runs it as a gate. RP2350 (`-v 1`); base programs encode identically
# under v0.
if(NOT PIOASM_EXECUTABLE)
    find_program(PIOASM_EXECUTABLE pioasm)
endif()
if(PIOASM_EXECUTABLE)
    set(_pio_dir ${CMAKE_CURRENT_SOURCE_DIR}/pio)
    set(_gen ${CMAKE_CURRENT_BINARY_DIR}/pioasm_golden)
    file(MAKE_DIRECTORY ${_gen})
    file(GLOB _corpus RELATIVE ${_pio_dir} CONFIGURE_DEPENDS ${_pio_dir}/*.pio)
    # Files named v1_*.pio use v1-only syntax (rxfifo / jmppin / prev|next /
    # mov pindirs) that pioasm accepts only with -v 1; drop them on RP2040.
    if(PIO_SIM_PIO_VERSION LESS 1)
        list(FILTER _corpus EXCLUDE REGEX "^v1_")
    endif()
    set(_golden "")
    set(_list "")
    foreach(_pio ${_corpus})
        get_filename_component(_base ${_pio} NAME_WE)
        add_custom_command(
            OUTPUT ${_gen}/${_base}.json
            COMMAND ${PIOASM_EXECUTABLE} -o json -v ${PIO_SIM_PIO_VERSION}
                    ${_pio_dir}/${_pio} ${_gen}/${_base}.json
            DEPENDS ${_pio_dir}/${_pio}
            COMMENT "pioasm golden: ${_base}.pio (PIO v${PIO_SIM_PIO_VERSION})")
        list(APPEND _golden ${_gen}/${_base}.json)
        string(APPEND _list "    \"${_base}\",\n")
    endforeach()
    file(GENERATE OUTPUT ${_gen}/corpus_list.h
        CONTENT "/* generated by tests/CMakeLists.txt */\nstatic const char *const CORPUS[] = {\n${_list}};\n")
    add_custom_target(pioasm_golden DEPENDS ${_golden})

    add_executable(test_pio_asm_vs_pioasm test_pio_asm_vs_pioasm.c)
    add_dependencies(test_pio_asm_vs_pioasm pioasm_golden)
    target_link_libraries(test_pio_asm_vs_pioasm PRIVATE pio_sim unity)
    target_include_directories(test_pio_asm_vs_pioasm PRIVATE ${_gen})
    target_compile_definitions(test_pio_asm_vs_pioasm PRIVATE
        TESTS_PIO_DIR="${_pio_dir}" PIOASM_JSON_DIR="${_gen}")
    add_test(NAME test_pio_asm_vs_pioasm COMMAND test_pio_asm_vs_pioasm)
else()
    message(STATUS "pio_sim: pioasm not found; skipping the pio_asm-vs-pioasm encoding "
        "differential (pass -DPIOASM_EXECUTABLE=/path/to/pioasm to enable).")
endif()
